Name:                migrate-rethinkdb
Version:             0.1
Synopsis:            rethinkdb backend for migrate
Description:         rethinkdb backend for migrate
License:             WTFPL
Author:              Chris Bolton
Maintainer:          c@chrisbolton.me
Stability:           Experimental
Category:            Database
Build-type:          Simple
Cabal-version:       >=1.2

Library
  hs-source-dirs: src
  exposed-modules: Database.Migrate.RethinkDB
  build-depends: base, rethinkdb, migrate, aeson, unordered-containers, text, mtl
  extensions: OverloadedStrings, GADTs
  ghc-options: -Wall

  source-repository head
    type: git
    location: http://github.com/saiko-chriskun/migrate-rethinkdb

  source-repository this
    type: git
    location: http://github.com/saiko-chriskun/migrate-rethinkdb
    tag: v0.1
