Name:                postgresql-simple-migrate
Version:             0.1
Synopsis:            postgresql-simple backend for migrate
Description:         postgresql-simple backend for migrate
License:             WTFPL
Author:              Chris Bolton
Maintainer:          c@chrisbolton.me
Stability:           Experimental
Category:            Database
Build-type:          Simple
Cabal-version:       >=1.2

Library
  hs-source-dirs: src
  exposed-modules: Database.Migrate.PostgresqlSimple
  build-depends: base, postgresql-simple, migrate
  extensions: OverloadedStrings, GADTs
  ghc-options: -Wall

  source-repository head
    type: git
    location: http://github.com/saiko-chriskun/postgresql-simple-migrate

  source-repository this
    type: git
    location: http://github.com/saiko-chriskun/postgresql-simple-migrate
    tag: v0.1
